grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $._declaration,
        $.attribute,
        $.conditional_block,
      ),

    import_statement: ($) =>
      seq(
        'import',
        commaSep1($.import_name),
        'from',
        field('source', $.string_literal),
        ';',
      ),

    function_declaration: ($) =>
      seq(
        optional($.inline_specifier),
        'function',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameters),
        ':',
        field('return_type', $._type),
        field('body', $.block),
      ),

    parameters: ($) =>
      seq('(', commaSep(choice($.self_parameter, $.parameter)), ')'),

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.let_else_statement,
        $.const_declaration,
        $.expression_statement,
        $.return_statement,
        $.defer_statement,
        $.break_statement,
        $.continue_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.for_of_statement,
        $.asm_statement,
        $.block,
        $.conditional_block,
        $.attribute,
      ),

    variable_declaration: ($) =>
      seq(
        'let',
        optional($.mutable_specifier),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    _expression: ($) =>
      choice(
        $.identifier,
        $.scoped_identifier,
        $.self_expression,
        $._literal,
        $.record_init,
        $.unit_expression,
        $.tuple_expression,
        $.group_expression,
        $.unary_expression,
        $.reference_expression,
        $.dereference_expression,
        $.postfix_expression,
        $.binary_expression,
        $.assignment_expression,
        $.ternary_expression,
        $.cast_expression,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.match_expression,
        $.lambda_expression,
        $.builtin_expression,
        $.capture_expression,
        $.asm_expression,
      ),

    unit_expression: (_) => seq('(', ')'),

    group_expression: ($) => seq('(', $._expression, ')'),

    tuple_expression: ($) =>
      seq(
        '(',
        $._expression,
        ',',
        optional(seq($._expression, repeat(seq(',', $._expression)), optional(','))),
        ')',
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field('operator', choice('-', '+', '!', '~', '++', '--')),
          field('operand', $._expression),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.MULTIPLICATIVE, choice('*', '/', '%')],
        [PREC.ADDITIVE, choice('+', '-')],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.COMPARATIVE, choice('<', '<=', '>', '>=')],
        [PREC.EQUALITY, choice('==', '!=')],
        [PREC.BITAND, '&'],
        [PREC.BITXOR, '^'],
        [PREC.BITOR, '|'],
        [PREC.AND, '&&'],
        [PREC.OR, '||'],
        [PREC.PIPE, '|>'],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    _type: ($) =>
      choice(
        $.primitive_type,
        $.identifier,
        $.scoped_identifier,
        $.generic_type,
        $.function_type,
        $.reference_type,
        $.pointer_type,
        $.mutable_type,
        $.array_type,
      ),

    primitive_type: (_) => choice(...PRIMITIVE_TYPES),

    pointer_type: ($) => prec.right(seq('*', $._type)),

    array_type: ($) =>
      prec.left(
        1,
        seq(
          field('element', $._type),
          '[',
          optional(field('size', $.integer_literal)),
          ']',
        ),
      ),

    vector_literal: ($) => seq('[', commaSep($._expression), ']'),

    integer_literal: (_) => token(/[0-9]+(_[0-9]+)*/),

    float_literal: (_) => token(/[0-9]+(_[0-9]+)*\.[0-9]+(_[0-9]+)*/),

    hex_literal: (_) => token(/0[xX][0-9a-fA-F]+/),

    binary_literal: (_) => token(/0[bB][01]+/),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.escape_sequence,
            token.immediate(prec(1, /[^"\\]+/)),
          ),
        ),
        '"',
      ),

    escape_sequence: (_) => token.immediate(/\\./),

    // Everything between the delimiters is content, whitespace included, so each
    // piece is an immediate token: a non-immediate one would let `extras` swallow
    // the spaces and newlines the literal is supposed to keep.
    char_literal: (_) =>
      token(
        seq(
          "'",
          choice(
            /[^'\\]/,
            /\\[bfnrt0\\']/,
            /\\u\{[0-9a-fA-F]+\}/,
          ),
          "'",
        ),
      ),

    boolean_literal: (_) => choice('true', 'false'),

    null_literal: (_) => 'null',

    atom_literal: ($) => seq(':', field('name', $.identifier)),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
