test/corpus/import.txt
================================================================================
VALID - import
================================================================================

import println from "std::io";

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (identifier)
    (string_literal)))

================================================================================
VALID - import with alias
================================================================================

import println as test from "std::io";

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (identifier)
    (identifier)
    (string_literal)))

================================================================================
VALID - Import multiple items
================================================================================

import 
  IgnisLanguageSupported,
  ExternDeclarationType,
  LuaType,
  Only,
  NotTranspile,
  Language,
from "std::ffi";

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    (string_literal)))
